--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "open-read-later-impl"
-version = "0.1.0"
-authors = ["jdormitzer <jdormitzer@hubspot.com>"]
+name = "open_read_later"
+version = "1.0.0"
+authors = ["Jeremy Dormitzer <jeremy.dormitzer@gmail.com>"]
 
 [dependencies]
 lazy_static = "0.2.8"
