--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "1.0.0"
 authors = ["Jeremy Dormitzer <jeremy.dormitzer@gmail.com>"]
 description = "An implementation of and CLI for the Open Read-Later list specification"
 repository = "https://github.com/jdormit/open-read-later-rust"
-keywords = ["link", "link saving", "open read later", "pocket"]
+keywords = ["links", "browsing", "pocket", "readlater"]
 categories = ["command-line-utilities", "command-line-interface"]
 license = "MIT"
 
