--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
 name = "open_read_later"
-version = "1.0.0"
+version = "1.0.1"
 authors = ["Jeremy Dormitzer <jeremy.dormitzer@gmail.com>"]
 description = "An implementation of and CLI for the Open Read-Later list specification"
 repository = "https://github.com/jdormit/open-read-later-rust"
+readme = "readme.md"
 keywords = ["links", "browsing", "pocket", "readlater"]
 categories = ["command-line-utilities", "command-line-interface"]
 license = "MIT"
