--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,6 @@ path = "src/main.rs"
 clap = "2.26.0"
 lazy_static = "0.2.8"
 regex = "0.2"
+serde = "1.0"
+serde_derive = "1.0"
+serde_json = "1.0"
